PN-161: Notifications does not handle contacts for remote matches correctly Refactoring for new ContactInfo implementation